--- a/card.html
+++ b/card.html
@@ -13,12 +13,16 @@
                 <div class="small">
 
                 </div>
-                <div class="imageholder">
-                    <img src="passort.png">
-
-                </div>
+                <h1>NETFLIX</h1>
+            </div>
+            <div>
+                <img src="passort.png" alt="">
+                <h2>Orishaba Famious</h2>
+                <h3>UI DESIGNER</h3>
+                <p>Kololo,Kampala</p>
 
             </div>
+            
 
         </div>
         
